# Tribe_mobile_application

./: .env.example  .eslintrc.json  .gitignore  .prettierignore  README.md  package.json
mobile/: app.json  babel.config.js  index.js  jest.config.js  metro.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
mobile/.expo/types/: router.d.ts
mobile/__tests__/__mocks__/: expo-sqlite.ts
mobile/__tests__/properties/: backoffDelay.test.ts  cachePersistence.test.ts  channelSelection.test.ts  commitMessage.test.ts  decodeTitles.test.ts  deepLinkRouting.test.ts  duplicateRead.test.ts  expiredPrompt.test.ts  fanStats.test.ts  momentCard.test.ts  replayLocalOnly.test.ts  signalToIntensity.test.ts  standingsDisplay.test.ts  wsMessageRouting.test.ts
mobile/app/: +not-found.tsx  _layout.tsx  index.tsx
mobile/hooks/: index.ts  useCampfireSocket.ts  useDeepLinkHandler.ts  useNotifications.ts
mobile/lib/: api.ts  cache.ts  deepLinking.ts  privy-mock.js
mobile/providers/: AuthProvider.tsx  ThemeProvider.tsx
mobile/stores/: index.ts  useAuthStore.ts  useCampfireStore.ts  useSettingsStore.ts  useStandingsStore.ts  useTimelineStore.ts
mobile/types/: fan.ts  index.ts  match.ts  read.ts  timeline.ts  ws.ts
program/: Anchor.toml  Cargo.toml  package.json
program/programs/tribe/: Cargo.toml
program/programs/tribe/src/: lib.rs
program/tests/: tribe.ts
server/: DEPLOY.md  Dockerfile  package.json  tsconfig.json
server/scripts/: demo-simulation.ts  deploy-program.sh  generate-wallet.ts  subscribe-txline.ts
server/src/: index.ts
(+110 files in other folders)
