[package]
name = "tribe"
version = "0.1.0"
description = "TRIBE — On-chain fan reputation, tribal identity, and soulbound Standing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tribe"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
